# affine-transformed-ray-alignment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: hit.hpp  image.hpp  main.cpp  rendering.hpp  scene.hpp  time.hpp  tinyshow.hpp
